# sledge-invoice-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  README2.md  buildspec.yml  cli.py  deploy.dev.yml  deploy.prod.yml  deploy.sh  deploy.yml  lambda_handler.py  pyproject.toml  server_handler.py  test_processor.py  todo.md
.cursor/: modular.plan.md
deployment/lambda/: Dockerfile  template.yaml
deployment/systemd/: invoice-extraction.service
docs/: ADDING_SERVICES.md  DEPLOYMENT.md  DEVELOPMENT.md
invoice_extraction/: __init__.py
invoice_extraction/core/: __init__.py  processor.py
invoice_extraction/handlers/: __init__.py  lambda_handler.py  server_handler.py
invoice_extraction/utils/: __init__.py  logger.py
shared/: __init__.py
